tests/ui/type-alias-impl-trait/generic_duplicate_param_use5.stderr
error[E0277]: `(T, U)` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use5.rs:11:5
   |
LL |     (t, u)
   |     ^^^^^^ `(T, U)` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `(T, U)`, which is required by `(T, U): Debug`
   = note: required for `(T, U)` to implement `Debug`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Two<T, U> = impl Debug (T, U): Debug;
   |                             +++++++++++++

error[E0277]: `(T, U)` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use5.rs:11:5
   |
LL |     (t, u)
   |     ^^^^^^ `(T, U)` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `(T, U)`, which is required by `(T, U): Debug`
   = note: required for `(T, U)` to implement `Debug`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Two<T, U> = impl Debug (T, U): Debug;
   |                             +++++++++++++

error[E0277]: `(U, T)` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use5.rs:17:5
   |
LL |     (u, t)
   |     ^^^^^^ `(U, T)` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `(U, T)`, which is required by `(U, T): Debug`
   = note: required for `(U, T)` to implement `Debug`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Two<T, U> = impl Debug (U, T): Debug;
   |                             +++++++++++++

error[E0277]: `(U, T)` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use5.rs:17:5
   |
LL |     (u, t)
   |     ^^^^^^ `(U, T)` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `(U, T)`, which is required by `(U, T): Debug`
   = note: required for `(U, T)` to implement `Debug`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL | type Two<T, U> = impl Debug (U, T): Debug;
   |                             +++++++++++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
